2003-10-13  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlTextWriter.cs : Implemented WriteSurrogateCharEntity().
	  Reverted my recent extraneous check in WriteStartAttribute().

2003-10-13  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlNode.cs : GetNamespaceOfPrefix() should check Attributes existence.
	  And it should throw ArgumentNullException.

2003-10-13  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlAttribute.cs : Fixed InnerText that did not removed its content
	  if there is two or more children.
	* XmlNode.cs : XmlNode.cs : Fixed bugzilla #49580 (1)to return "",
	  (2)not to compare NodeType for detached nodes, (3)optimization to
	  compare element's prefix.
	* XmlSecureResolver.cs : Removed extraneous members.

2003-10-09  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Added DTDReader.cs. It is almost importation of XmlTextReader.
	* DTDObjectModel.cs :
	  - More .NET-ism. Properties took place of fields.
	  - Imported PE set from XmlTextReader. Added location info.
	  - Added DTDEntityBase common to PE and GE.
	  - More correct text declaration handling with new XmlTextReader.
	* DTDValidatingReader.cs :
	  - Now uses entity resolving XmlTextReader to validate attributes
	    correctly. Implemented standalone
	  - Standalone and default related validity constraints check.
	* XmlImplementation.cs: Implemented HasFeature().
	* XmlNode.cs : Implemented Supports().
	* XmlNodeReader.cs : Modified to use XmlTextReader.SkipTextDeclaration()
	* XmlParserInput.cs : Removed extraneous members.
	* XmlTextReader.cs :
	  - All DTD related functionality now goes to DTDReader.cs
	  - It became old simple TextReader input style.
	  - Implemented GetRemainder().
	  - Implemented ReadBase64(), ReadBinHex() and ReadChars(), using 
	    additional new private method ReadUntilEndTag().
	  - Removed incomplete MaybeTextDecl and added SkipTextDeclaration().
	    ReadXmlDeclaration() now became simple.
	  - More strict entity reference check at SetEntityReferenceProperty()